[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fks_shared_python"
version = "0.2.0"
description = "FKS shared Python utilities: config/env loading, logging helpers, risk utils, shared types"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [ { name = "FKS" } ]
dependencies = [
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "jsonschema>=4.22.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "mypy", "ruff"]
num = ["numpy>=1.26"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
strict = false

[tool.ruff]
line-length = 100
